--- a/views/blank/index.ejs
+++ b/views/blank/index.ejs
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <script src="/app.js"></script>
 </head>
 <body>
     hi. this is home page :)
+
+    <span id="error"></span>
+
+    <button onclick="console.log(App.auth.logout());">Logout</button>
 </body>
 </html>
